--- a/build.gradle
+++ b/build.gradle
@@ -36,11 +36,15 @@ dependencies {
     // Use the awesome Spock testing and specification framework even with Java
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'junit:junit:4.12'
+    
+    implementation project(':api')
+    implementation project(':progress_plugin')
+    implementation project(':csv_plugin')
 }
 
 application {
     // Define the main class for the application
-    mainClassName = 'SEC2.App'
+    mainClassName = 'SEC2.Main'
 }
 
 run {
