--- a/csv_plugin/build.gradle
+++ b/csv_plugin/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:29.0-jre'
+    
+    // apache commons csv
+    implementation'org.apache.commons:commons-csv:1.8'
 
     // Use the latest Groovy version for Spock testing
     testImplementation 'org.codehaus.groovy:groovy-all:2.5.11'
@@ -33,4 +36,6 @@ dependencies {
     // Use the awesome Spock testing and specification framework even with Java
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'junit:junit:4.13'
+    
+    implementation project(':api')
 }
