--- a/progress_plugin/build.gradle
+++ b/progress_plugin/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     // Use the awesome Spock testing and specification framework even with Java
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'junit:junit:4.13'
+    implementation project(':api')
 }
