--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,7 @@
  * Detailed information about configuring a multi-project build in Gradle can be found
  * in the user manual at https://docs.gradle.org/5.6.2/userguide/multi_project_builds.html
  */
+ 
+include 'api', 'progress_plugin', 'csv_plugin'
 
 rootProject.name = 'SEC2'
