Added Plugin loader and factorial stuff, do fibonac and native plugins

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation project(':api')
     implementation project(':progress_plugin')
     implementation project(':csv_plugin')
+    implementation project(':math_plugin')
 }
 
 application {
