--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,6 @@
  * in the user manual at https://docs.gradle.org/5.6.2/userguide/multi_project_builds.html
  */
  
-include 'api', 'progress_plugin', 'csv_plugin'
+include 'api', 'progress_plugin', 'csv_plugin', 'math_plugin'
 
 rootProject.name = 'SEC2'
