Added native plugin, need to add fibonacci and clean up

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation project(':progress_plugin')
     implementation project(':csv_plugin')
     implementation project(':math_plugin')
+    implementation project(':java_native_loader')
 }
 
 application {
