--- a/native_plugin/build.gradle
+++ b/native_plugin/build.gradle
@@ -9,12 +9,60 @@
 plugins {
     // Apply the cpp-library plugin to add support for building C++ libraries
     id 'cpp-library'
+    id 'cpp'
+    id 'java'
 
     // Apply the cpp-unit-test plugin to add support for building and running C++ test executables
-    id 'cpp-unit-test'
+    // id 'cpp-unit-test'
+}
+
+tasks.withType(CppCompile).configureEach {
+    // Tell the C++ compiler about the JNI. There are a series of C/C++ header files that come 
+    // with the JDK. To find the JDK, we consult the 'JAVA_HOME' environment variable.
+    
+    // The actual 'jni.h' file lives in the 'include' directory, but there are also a series of 
+    // other, platform-specific header files in 'include/linux' and/or 'include/win32'. Your actual
+    // JDK may only have one of these platform-specific directories.
+    
+    includes "$System.env.JAVA_HOME/include"
+    includes "$System.env.JAVA_HOME/include/linux"
+    includes "$System.env.JAVA_HOME/include/win32"
 }
 
 // Set the target operating system and architecture for this library
 library {
-    targetMachines.add(machines.linux.x86_64)
+    // Define the library's name. (The file produced will be 'lib<baseName>.so' on Linux or 
+    // '<baseName>.dll' on Windows.)
+    baseName = 'native_plugin'
+
+    // Create a 'shared' library only (not a 'static' library).
+    linkage = [Linkage.SHARED]
+    
+    // What is the target platform?
+    targetMachines = [
+        machines.linux.x86_64,
+        machines.windows.x86_64,
+        machines.macOS.x86_64
+    ]
+}
+
+model {
+    components {
+        native_plugin(NativeLibrarySpec) {
+            sources {
+                cpp {
+                    source {
+                        srcDirs 'src/main/cpp'
+                        include '**/*.cpp'
+                    }
+                }
+            }
+
+            binaries.all {
+                cCompiler.args "-I$System.env.JAVA_HOME/include"
+                cCompiler.args "-I$System.env.JAVA_HOME/include/linux"
+                cCompiler.args "-I$System.env.JAVA_HOME/include/win32"
+            }
+        }
+    }
 }
